Se agregan correcciones en Hero y About

--- a/futurgas-web/index.html
+++ b/futurgas-web/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/futurgas.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="FuturGas - Soluciones integrales en servicios de gas, electricidad, plomería y construcción. Profesionales calificados para resolver todas tus necesidades." />
     <title>FuturGas - Soluciones en gas, electricidad y construcción</title>
