--- a/futurgas-web/index.html
+++ b/futurgas-web/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/futurgas.png" type="image/png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="FuturGas - Soluciones integrales en servicios de gas, electricidad, plomería y construcción. Profesionales calificados para resolver todas tus necesidades." />
-    <title>FuturGas - Soluciones en gas, electricidad y construcción</title>
+    <title>FuturGas | Gas, Electricidad y Plomería en CABA y Zona Norte</title>
+    <meta name="description" content="Soluciones profesionales en gas, electricidad y plomería. Instalaciones, reparaciones y mantenimiento con técnicos certificados en CABA y Zona Norte. Atención rápida y segura. ¡Pedí tu presupuesto sin compromiso!" />
+    <meta name="keywords" content="gasista matriculado, electricidad, plomería, instalaciones, reparaciones, mantenimiento, CABA, zona norte, presupuesto, FuturGas" />
+    <meta name="author" content="FuturGas" />
+    <!-- Open Graph -->
+    <meta property="og:title" content="FuturGas | Gas, Electricidad y Plomería en CABA y Zona Norte" />
+    <meta property="og:description" content="Soluciones profesionales en gas, electricidad y plomería. Instalaciones, reparaciones y mantenimiento con técnicos certificados en CABA y Zona Norte." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://futurgas.vercel.app/" />
+    <meta property="og:image" content="https://futurgas.vercel.app/futurgas.png" />
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="FuturGas | Gas, Electricidad y Plomería en CABA y Zona Norte" />
+    <meta name="twitter:description" content="Soluciones profesionales en gas, electricidad y plomería. Instalaciones, reparaciones y mantenimiento con técnicos certificados en CABA y Zona Norte." />
+    <meta name="twitter:image" content="https://futurgas.vercel.app/futurgas.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
